# serving-atr-inference

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
config/: models.yaml
deploy/systemd/: atr-gateway.service  atr-kraken.service  atr-party.service  atr-trocr.service  atr-troct.service
docs/: DEPLOY.md  asteraix-environment.md
engines/kraken_svc/: README.md  app.py  requirements.txt
engines/party_svc/: README.md  app.py  requirements.txt
engines/trocr_svc/: README.md  app.py  requirements.txt
engines/troqu_svc/: README.md  requirements.txt
engines/vllm/: README.md  requirements.txt
eval/: README.md  metrics.py  run_eval.py
scripts/: download_models.py  install_user_units.sh  make_venvs.sh  probe_host.sh  spike_engine_installs.sh
src/atr_serving/: __init__.py  app.py  clients.py  config.py  contracts.py  image_io.py  manager.py  pipeline.py  registry.py
src/atr_serving/api/: auth.py  routes.py  schemas.py
tests/: test_api.py  test_clients.py  test_engine_routes.py  test_eval.py  test_image_io.py  test_manager.py  test_recognition_routes.py  test_registry.py  test_vllm_routes.py
