[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "serving-atr-inference"
version = "0.1.0"
description = "Flexible ATR/OCR/HTR inference gateway serving many model families behind one API"
requires-python = ">=3.11"
license = { text = "MIT" }
# Gateway deps ONLY. No ML libraries here — those live in the per-engine venvs.
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
